<resources>
    <string name="app_name">Voice Changer</string>
    <string name="add_music">Add Music</string>
    <string name="hey">Hey</string>
    <string name="idea">Idea</string>
    <string name="mind">Mind</string>
    <string name="record">Record</string>
    <string name="claps">Claps</string>
    <string name="yehaw">Yehaw</string>
    <string name="drops">Drops</string>
    <string name="stop">Stop</string>
    <string name="_30">30</string>
    <string name="recorder">Recorder</string>
    <string name="effects">Effects</string>
    <string name="image">image</string>
    <string name="go_to_record">Go to record</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="title_tutorial_1">Voice Changer Free - Sound &amp; Voice Effects</string>
    <string name="content_tutorial_1">There are many representative voices for you to use and share with your friends.</string>
    <string name="title_tutorial_2">Convert text to voice</string>
    <string name="content_tutorial_2">Don\'t want to say? Don\'t worry, just enter text to convert to voice.</string>
    <string name="title_tutorial_3">Messenger Voice Changer</string>
    <string name="content_tutorial_3">You can share the funny voice changer with your friends, adding amusement to your interactions.</string>
    <string name="title_tutorial_4">Powerful Recorder</string>
    <string name="content_tutorial_4">Our app provides a seamless recording experience with adjustable settings.</string>
    <string name="recordings">Recordings</string>
    <string name="upload_files">Upload Files</string>
    <string name="text_to_audio">Text To Audio</string>
    <string name="my_record">My Record</string>
    <string name="see_all">See All</string>
    <string name="no_records_available">No records available</string>
    <string name="voice_changer">Voice Changer</string>
    <string name="tap_to_start_recording">Tap to start recording</string>
    <string name="tap_to_pause">Tap to pause</string>
    <string name="tap_to_continue">Tap to continue</string>
    <string name="recording">Recording</string>
    <string name="img_recorder_desc">Recorder Image</string>
    <string name="reset">Reset</string>
    <string name="start_pause_record">Start/Pause Record</string>
    <string name="tap_to_record_hint_desc">Tap to start recording hint</string>
    <string name="timer_start">00 : 00</string>
    <string name="sound_effect">Sound effect</string>
    <string name="ambient_sound">Ambient sound</string>
    <string name="sound">Sound</string>
    <string name="pitch">Pitch</string>
    <string name="audio_info">%1$s | %2$s</string>
    <string name="none">None</string>
    <string name="robot">Robot</string>
    <string name="chipmunk">Chipmunk</string>
    <string name="cave">Cave</string>
    <string name="time_start_audio">00:00</string>
    <string name="x">%.1fX</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save_audio">Save Audio</string>
    <string name="saving_audio">Saving Audio</string>
    <string name="share">Share</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="re_record">Re-record</string>
    <string name="share_audio">Share Audio</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="load_more">Load more</string>
    <string name="load_more_message">Loading more items…</string>
    <string name="newest">Newest</string>
    <string name="file_name">File Name</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="click_one_more_time_to_go_home">Click one more time to go home</string>
    <string name="click_one_more_time_to_exit">Click one more time to exit</string>
    <string name="deleted_file_successfully">Deleted file %1$s successfully.</string>
    <string name="rename_file_successfully">Renamed file %1$s to %2$s successfully</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_content">Are you sure you want to delete %1$s?</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="play">Play</string>
    <string name="country">Country</string>
    <string name="select_language">Select Language</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
</resources>