<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@android:color/white"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="@dimen/_10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_file"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/edtFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_file_name"
                android:background="@drawable/bg_edit_text"
                android:padding="@dimen/_8dp"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/bg_blue_radius_10p"
                android:text="@string/cancel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/buttonOk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtFileName" />

            <Button
                android:id="@+id/buttonOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_blue_radius_10p"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/edtFileName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonCancel"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
