<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/_8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvRename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/rename"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@id/tvRename"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvSetAsRingtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_8dp"
                android:paddingStart="@dimen/_8dp"
                android:paddingEnd="@dimen/_24dp"
                android:text="@string/set_as_ringtone"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp"
                app:layout_constraintTop_toBottomOf="@id/divider1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@id/tvSetAsRingtone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvShare"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/share"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp"
                app:layout_constraintTop_toBottomOf="@id/divider2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorGray"
                app:layout_constraintTop_toBottomOf="@id/tvShare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8dp"
                android:text="@string/delete"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sp"
                app:layout_constraintTop_toBottomOf="@id/divider3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>