<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/_10dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_as_ringtone"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/optionContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginTop="@dimen/_16dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/btnRingtone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_item_voice_changer"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_ringtone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/set_as_ringtone"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnAlarm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/bg_item_voice_changer"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_alarm"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alarm"
                        android:layout_marginTop="@dimen/_4dp"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/_16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_item_voice_changer"
                    android:orientation="vertical"
                    android:padding="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_40dp"
                        android:layout_height="@dimen/_40dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@mipmap/ic_notification" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_4dp"
                        android:text="@string/notification"
                        android:layout_gravity="center_horizontal"
                        android:textSize="@dimen/_16sp" />
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/buttonCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toStartOf="@+id/buttonOk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/optionContainer">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_button_gray_gradient"
                    android:padding="@dimen/_8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/cancel"
                        android:textColor="@color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/buttonOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/buttonCancel"
                app:layout_constraintTop_toBottomOf="@id/optionContainer">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_button_blue_gradient"
                    android:padding="@dimen/_8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ok"
                        android:textColor="@color/white" />
                </FrameLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>


